# birthday-reminder-bot

./: .gitignore  README.md  docker-compose.yml  dockerfile  example_request.json  pyproject.toml  requirements.txt  serverless.yml
lambda/: handlers.py
server/: server.py
src/: __init__.py  birthday_storage.py  bot.py  cli.py  config.py  handlers.py  local_server.py  reminders.py  server.py  set.py  set_my_commands.py  set_webhook.py  user_storage.py  utils.py
