[tool.poetry]
name = "lambdas"
version = "0.1.0"
description = ""
authors = ["Damián Ferencz <damianferencz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.54"
python-telegram = "^0.18.0"
telebot="^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
